--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>SpaceCore</title>
 		<link href="static/styles/fonts.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body id="page" class="page">
 		<div class="page__header header">
