last changes--game doesn't work

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<title>SpaceCore</title>
 		<link href="static/styles/fonts.css" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body id="page" class="page">
 		<div class="page__header header">
@@ -16,6 +15,7 @@
 			<div class="content__rules js-rules" hidden="hidden"></div>
 			<div class="content__rules js-profile" hidden="hidden"></div>
 			<div class="content__rules js-about" hidden="hidden"></div>
+			<div class="content__rules js-overplay" hidden="hidden"></div>
 			<div class="content__game js-game">
 				<canvas class="game js-canvas" hidden="hidden"></canvas>
 			</div>
