eslint config, npm babylon, refactoring code

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
 			<div class="content__game js-game">
 				<canvas class="game js-canvas" hidden="hidden"></canvas>
 			</div>
-			<video autoplay loop muted class="bgvideo">
-				<source src="static/video/stars.mp4" type="video/mp4"></source>
+			<video>
+				<source src="static/video/stars.mp4" type="video/mp4">
 			</video>
 		</div>
 	</body>
